NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/NATT_Extended_Warranty__c.object-meta.xml
<CustomObject>
    <description>Used with Tavant integration</description>
    <label>Unit Terms</label>
    <nameField>
        <displayFormat>EW-{0000000}</displayFormat>
        <label>Unit Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NATT_Extended_Warranty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>