NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>This field will be used by Tavant when record is process based on Unit type. value will always be &apos;Update&apos; from Tavant</description>
    <label>Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>