NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/Deductibles__c.field-meta.xml
<CustomField>
    <fullName>Deductibles__c</fullName>
    <description>Deductible value of the line item</description>
    <label>Deductibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>