NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <label>isSuccess</label>
    <length>25</length>
    <type>Text</type>
</CustomField>