NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/NATT_Inventory__c.field-meta.xml
<CustomField>
    <fullName>NATT_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NATT Inventory</label>
    <referenceTo>NATT_Inventory__c</referenceTo>
    <relationshipLabel>NATT_Extended_Warranty</relationshipLabel>
    <relationshipName>NATT_Extended_Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>