NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/PolicyCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyCode__c</fullName>
    <description>Warranty Policy Code</description>
    <label>PolicyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>