NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/remove__c.field-meta.xml
<CustomField>
    <fullName>remove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>remove</label>
    <type>Checkbox</type>
</CustomField>