NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>When field &apos;IsProcessed&apos; is updated by Tavant to False this field will record the error.</description>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>