NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/SpecialWarDate__c.field-meta.xml
<CustomField>
    <fullName>SpecialWarDate__c</fullName>
    <description>If warranty need to update existing record, this field needs value for New StartDate</description>
    <label>SpecialWarDate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>