NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Number of months for the warranty coverage. Term usage will be updated when new SpeicalWarDate. For cancelation &apos;0&apos; and for extension new usage terms</description>
    <label>Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>