NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/unitSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>unitSerialNumber__c</fullName>
    <description>Unit Serial number for the Unit covered</description>
    <label>unitSerialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>