NATTQA-ENV/force-app/main/default/objects/NATT_Extended_Warranty__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <description>Number of hours for the warranty coverage</description>
    <label>Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>